# rust-tokenizers

./: .gitignore  .travis.yml  Cargo.toml  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: build.yml
main/: Cargo.toml  README.md  build.rs  clippy.toml
main/examples/: marian_tokenizer.rs  sentence_piece.rs
main/protos/: sentencepiece_model.proto
main/src/: adapters.rs  error.rs  lib.rs  main.rs
main/src/hf_tokenizers/: config.rs  error.rs
main/src/preprocessing/: error.rs  mod.rs
main/src/preprocessing/tokenizer/: albert_tokenizer.rs  base_tokenizer.rs  bert_tokenizer.rs  constants.rs  ctrl_tokenizer.rs  gpt2_tokenizer.rs  marian_tokenizer.rs  mod.rs  openai_gpt_tokenizer.rs  roberta_tokenizer.rs  sentence_piece_tokenizer.rs  t5_tokenizer.rs  tokenization_utils.rs  xlm_roberta_tokenizer.rs  xlnet_tokenizer.rs
main/src/preprocessing/vocab/: albert_vocab.rs  base_vocab.rs  bert_vocab.rs  bpe_vocab.rs  gpt2_vocab.rs  marian_vocab.rs  mod.rs  openai_gpt_vocab.rs  roberta_vocab.rs  sentence_piece_vocab.rs  t5_vocab.rs  xlm_roberta_vocab.rs  xlnet_vocab.rs
main/src/preprocessing/vocab/sentencepiece_proto/: mod.rs  sentencepiece_model.rs
main/src/tokenizer/: albert_tokenizer.rs  base_tokenizer.rs  bert_tokenizer.rs  constants.rs  ctrl_tokenizer.rs  deberta_tokenizer.rs  deberta_v2_tokenizer.rs  fnet_tokenizer.rs  gpt2_tokenizer.rs  m2m100_tokenizer.rs  marian_tokenizer.rs  mbart50_tokenizer.rs  mod.rs  nllb_tokenizer.rs  openai_gpt_tokenizer.rs  pegasus_tokenizer.rs  prophetnet_tokenizer.rs  reformer_tokenizer.rs  roberta_tokenizer.rs  sentence_piece_bpe_tokenizer.rs  sentence_piece_tokenizer.rs  t5_tokenizer.rs  tokenization_utils.rs  wav2vec2_tokenizer.rs  xlm_roberta_tokenizer.rs  xlnet_tokenizer.rs
main/src/vocab/: albert_vocab.rs  base_vocab.rs  bert_vocab.rs  bpe_vocab.rs  deberta_v2_vocab.rs  deberta_vocab.rs  fnet_vocab.rs  gpt2_vocab.rs  m2m100_vocab.rs  marian_vocab.rs  mbart50_vocab.rs  mod.rs  nllb_vocab.rs  openai_gpt_vocab.rs  pegasus_vocab.rs  prophetnet_vocab.rs  reformer_vocab.rs  roberta_vocab.rs  sentence_piece_bpe_model.rs  sentence_piece_unigram_model.rs  sentence_piece_vocab.rs  t5_vocab.rs  wav2vec2_vocab.rs  xlm_roberta_vocab.rs  xlnet_vocab.rs
main/src/vocab/sentencepiece_proto/: mod.rs  sentencepiece_model.rs
main/tests/: test_albert_uncased.rs  test_bert_uncased.rs  test_ctrl_cased.rs  test_deberta_cased.rs  test_deberta_v2_cased.rs  test_fnet_cased.rs  test_gpt2_cased.rs  test_gpt2_uncased.rs  test_m2m100_cased.rs  test_mbart50_cased.rs  test_nllb_cased.rs  test_openai_gpt_uncased.rs  test_pegasus_cased.rs  test_prophetnet_uncased.rs  test_reformer_cased.rs  test_roberta_cased.rs  test_sentence_piece.rs  test_sentence_piece_bpe.rs  test_t5_cased.rs  test_utils.rs  test_xlm_roberta_uncased.rs  test_xlnet_cased.rs
python-bindings/: Cargo.toml  install_rust.sh  requirements-dev.txt  setup.py
python-bindings/rust_tokenizers/: __init__.py
python-bindings/src/: lib.rs
python-bindings/tests/: test_benchmark_bert.py  test_benchmark_ctrl.py  test_benchmark_distilbert.py  test_benchmark_distilgpt2.py  test_benchmark_distilroberta.py  test_benchmark_gpt2.py  test_benchmark_openai_gpt.py  test_benchmark_roberta.py  test_benchmark_tokenization_albert.py  test_benchmark_tokenization_bert.py  test_benchmark_tokenization_ctrl.py  test_benchmark_tokenization_gpt.py  test_benchmark_tokenization_gpt2.py  test_benchmark_tokenization_roberta.py  test_benchmark_tokenization_sentencepiece.py  test_tokenization_qnli.py  test_tokenization_sst2.py
rust_transformers/: __init__.py
src/: lib.rs  main.rs
src/preprocessing/: adapters.rs  mod.rs
src/preprocessing/tokenizer/: base_tokenizer.rs  bert_tokenizer.rs  constants.rs  ctrl_tokenizer.rs  gpt2_tokenizer.rs  mod.rs  openai_gpt_tokenizer.rs  roberta_tokenizer.rs  tokenization_utils.rs
src/preprocessing/vocab/: base_vocab.rs  bert_vocab.rs  ctrl_vocab.rs  gpt2_vocab.rs  mod.rs  openai_gpt_vocab.rs  roberta_vocab.rs
src/vocab/: base_vocab.rs  mod.rs
tests/: test_benchmark_bert.py  test_benchmark_ctrl.py  test_benchmark_distilbert.py  test_benchmark_distilgpt2.py  test_benchmark_distilroberta.py  test_benchmark_gpt2.py  test_benchmark_openai_gpt.py  test_benchmark_roberta.py  test_tokenization_qnli.py  test_tokenization_sst2.py
