[package]
name = "transformers"
version = "0.1.0"
authors = ["Guillaume B <guillaume.becquin@gmail.com>"]
edition = "2018"

[dependencies]
csv = "1.1"
unicode-normalization = "0.1.8"

[dev-dependencies]
tempfile = "3.1.0"

[lib]
name = "transformers"
path = "src/lib.rs"


[[bin]]
name = "rust_transformers_bin"
path = "src/main.rs"