[package]
name = "rust_tokenizers"
version = "7.0.2"
authors = ["Guillaume Becquin <guillaume.becquin@gmail.com>"]
edition = "2018"
description = "High performance tokenizers for Rust"
repository = "https://github.com/guillaume-be/rust-tokenizers"
license = "Apache-2.0"
readme = "README.md"
build = "build.rs"
keywords = ["nlp", "machine-learning", "tokenizer"]

[dependencies]
csv = "1.1.6"
unicode-normalization = "0.1.22"
rayon = "1.6.1"
lazy_static = "1.4.0"
itertools = "0.10.5"
serde = {version = "1.0.151", features = ["derive"]}
serde_json = "1.0.91"
regex = "1.7.0"
protobuf = "2.28.0"
hashbrown = "0.13.1"
unicode-normalization-alignments = "0.1.12"
thiserror = "1.0.38"

[dev-dependencies]
tempfile = "3.3.0"
dirs = "4.0.0"
reqwest = {version = "0.11.13", default-features = false, features = ["blocking"]}
anyhow = "1.0.68"

[build-dependencies]
protobuf-codegen-pure = {version = "2.28.0", optional = true}

[features]
proto-compile = [ "protobuf-codegen-pure" ]

[lib]
name = "rust_tokenizers"
path = "src/lib.rs"
crate-type = ["lib"]
