[package]
name = "rust_tokenizers"
version = "7.0.2"
authors = ["Guillaume Becquin <guillaume.becquin@gmail.com>"]
edition = "2018"
description = "High performance tokenizers for Rust"
repository = "https://github.com/guillaume-be/rust-tokenizers"
license = "Apache-2.0"
readme = "README.md"
build = "build.rs"
keywords = ["nlp", "machine-learning", "tokenizer"]

[dependencies]
csv = "1"
unicode-normalization = "0.1"
rayon = "1"
lazy_static = "1"
itertools = "0.10"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
regex = "1"
protobuf = "2"
hashbrown = "0.13"
unicode-normalization-alignments = "0.1.12"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
dirs = "4"
reqwest = {version = "0.11", default-features = false, features = ["blocking"]}
anyhow = "1"

[build-dependencies]
protobuf-codegen-pure = {version = "2", optional = true}

[features]
proto-compile = [ "protobuf-codegen-pure" ]

[lib]
name = "rust_tokenizers"
path = "src/lib.rs"
crate-type = ["lib"]
