[package]
name = "rust_tokenizers_python"
version = "7.0.1"
authors = ["Guillaume Becquin <guillaume.becquin@gmail.com>"]
edition = "2018"
description = "High performance tokenizers for Rust"
repository = "https://github.com/guillaume-be/rust-tokenizers"
license = "Apache-2.0"

[dependencies.pyo3]
version = "0.15.0"
features = ["extension-module"]

[dependencies.rust_tokenizers]
version = "*"
path = "../main"

[dev-dependencies]
tempfile = "3.2.0"

[lib]
name = "rust_tokenizers"
path = "src/lib.rs"
crate-type = ["cdylib"]
