[package]
name = "rust_tokenizers_python"
version = "8.1.0"
authors = ["Guillaume Becquin <guillaume.becquin@gmail.com>"]
edition = "2018"
description = "High performance tokenizers for Rust"
repository = "https://github.com/guillaume-be/rust-tokenizers"
license = "Apache-2.0"

[dependencies.pyo3]
version = "0.18"
features = ["extension-module"]

[dependencies.rust_tokenizers]
version = "8.0.0"
path = "../main"

[dev-dependencies]
tempfile = "3"

[lib]
name = "rust_tokenizers"
path = "src/lib.rs"
crate-type = ["cdylib"]
